# TaPaFuzz

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  ci_run_sim.sh
core/: FuzzerCore.bsv  FuzzerTypes.bsv  Logging.bsv  Makefile
core/axi/: AXI4_Lite_Master.bsv  AXI4_Lite_Slave.bsv  AXI4_Master.bsv  AXI4_Slave.bsv  AXI4_Stream.bsv  GenericAxi4LiteSlave.bsv  Note.md
core/cf/: FuzzerCF_BitmapCore.bsv  FuzzerCF_CfDetectors.bsv  FuzzerCF_Hasher.bsv
core/wrappers/: FuzzerCoreWrapper_cva5.bsv
eval/: compare_analysis_edges.py  transcript_analyze.py
host/fuzzer_host_libafl/: Cargo.toml  Note.md
host/fuzzer_host_libafl/src/: main.rs  tapasco_host.rs  tapasco_runner_phys.rs  tapasco_runner_sim.rs  time_feedback.rs
ip/axi_offset_resetwrap/: .gitignore
ip/cva5/: commit  component.xml
ip/cva5_bram/: component.xml  taiga_config.sv
tcl/: cva5_pe_fuzzer.tcl  fuzzer_ip.tcl  package_fuzzer_pe.tcl
testPrograms/: .gitignore  Makefile  base.mk  functions.h  main_forkserver.c  main_persistent.c  make_afl_clang_fast.sh  rv.ld  rv_bram.ld  rv_bram_tapascoriscv.ld  startup.s  startup_tapascoriscv.s
testPrograms/en_minimal/: main.c
testPrograms/en_mix1/: good.c
testPrograms/en_read_fault/: main.c
testPrograms/en_unaligned_addr/: main.c
testPrograms/en_write_fault/: main.c
testPrograms/mn_arduinojson/: .gitignore  Makefile  json.dict  json_fuzzer.cpp
testPrograms/mn_lwesp/: .gitignore  Makefile  lwesp_ll_fuzz.c  lwesp_opts.h  lwesp_sys_fuzz.c  lwesp_sys_port.h  main.c
testPrograms/mn_zstd/: Makefile  (+1 more)
testbench/: Note.txt  amba.py  test_riscv.py
(+49 files in other folders)
